src/styles/_layout.scss
@import "../styles/variables";
@import "../styles/mixins";

html,
body,
#___gatsby,
#gatsby-focus-wrapper {
  height: 90%;
  min-height: 90% !important;
}

body {
  max-width: 700px;
  margin: 0 auto;
  padding: 1rem; // Add padding for smaller screens
  background: #1d2021;
}

.main {
  //  background: #282828;
}

.computer-image {
  display: none;
  width: 32px;
  height: 32px;
}

h2.post__title {
  font-size: 1rem;
  padding-bottom: 0px !important;
  padding-top: 5px !important;
  padding: 5px;
  background-color: $greyDark;
  border-width: 3px;
  border-color: #665c54;
  border-style: double;
}

.post-metadata {
  @include default-font;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 1rem;

  @media (max-width: 576px) {
    flex-direction: column;
    gap: 0.5rem;
  }
}

.post-metadata__date {
  font-size: 14px;
  display: inline-block;
}

.post-metadata__tag {
  font-size: 14px;
}

.links {
  display: flex;
  flex-direction: row;
  gap: 1rem;

  @media (max-width: 576px) {
    flex-direction: column;
    gap: 0.5rem;
  }

  //  justify-content: space-between;
  // * {
  //   margin-right: 1rem;
  // }
}

.gatsby-highlight {
  margin-bottom: 1rem;
  max-width: 768px;
}

div.responsive-svg {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin: 1rem 0;

  img {
    min-width: 0;
  }
}

.float {
  float: right;
  //padding-left: 1rem;
  padding: 1rem;
  text-align: center;

  .caption {
    padding-top: 5px;
    font-size: 14px;
    max-width: 300px;
    font-style: italic;

    a {
      font-size: 14px;
    }
  }
}

@media (max-width: 576px) {
  .float {
    text-align: center;
    float: none;
    padding: 0;
  }

  .caption {
    min-width: 100%;
    width: 100%;
  }
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 1rem 0;
  padding: 0.5rem;
  border: 2px solid $grey;

  * {
    margin-left: 1rem;
  }
}

.ui-nested-section {
  // border: 2px solid $grey;
  // padding: 0.5rem;
  margin-bottom: 1rem;
}

.header-with-controls {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-bottom: 1px solid $grey;
  margin-bottom: 0.5rem;
}

.post-listing-body {
  @media (min-width: 576px) {
    height: calc(100vh - 350px);
  }
}

.post-listing-footer {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  height: 2rem;
  background: $grey;
  color: $white;
  font-weight: 500;

  .button-active {
    &:hover {
      color: $aqua;
    }
  }

  button {
    @include strip-button-styles;
    height: 100%;
    padding: 0 1rem;
    width: fit-content;
    color: $white;
  }

}

